@@ -2,43 +2,43 @@ package org.itmo.modules;
 
 import org.itmo.utils.CommandInfo;
 import org.itmo.utils.CommandResultSaver;
-import org.itmo.utils.FileInfo;
 import org.itmo.utils.FileUtils;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Stream;
 
+import static org.itmo.commands.Commands.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class ExecutorTests {
     
-    Executor executor = new Executor();
+    private final Executor executor = new Executor();
     
     @ParameterizedTest
     @MethodSource("forRunAllCommandsTest")
-    public void runAllCommandsTest(List<CommandInfo> allCommands, String result) {
+    public void runAllCommandsTest(List<CommandInfo> allCommands, String expected) {
         executor.run(allCommands);
-        FileInfo fInfo = FileUtils.getFileInfo(CommandResultSaver.getResult().toFile().getPath(), false);
-        Optional<String> line = FileUtils.loadLineFromFile(fInfo);
-        StringBuilder actual = new StringBuilder();
-        while (line.isPresent()) {
-            actual.append(line.get());
-            line = FileUtils.loadLineFromFile(fInfo);
-        }
-        assertEquals(result, actual.toString());
+        String actual = FileUtils.loadFullContent(CommandResultSaver.getResult().toFile());
+        assertEquals(expected, actual);
     }
     
     public static Stream<? extends Arguments> forRunAllCommandsTest() {
-        return Stream.of(Arguments.of(
-                List.of(new CommandInfo("echo", new ArrayList<>(), List.of("some string"))), "some string"),
-                         Arguments.of(List.of(new CommandInfo("cat", new ArrayList<>(), List.of("some text")),
-                                              new CommandInfo("wc", new ArrayList<>(), new ArrayList<>())), ""));
+        return Stream.of(
+                Arguments.of(
+                        List.of(new CommandInfo(echo, Collections.emptyList(), List.of("some string"))),
+                        "some string"),
+                Arguments.of(
+                        List.of(new CommandInfo(cat, Collections.emptyList(), List.of("some text")),
+                                new CommandInfo(wc, Collections.emptyList(), Collections.emptyList())),
+                        ""),
+                Arguments.of(List.of(new CommandInfo(echo, Collections.emptyList(), List.of("text")),
+                                new CommandInfo(echo, Collections.emptyList(), Collections.emptyList())),
+                        "\n")
+        );
     }
     
 }
