@@ -1,56 +1,26 @@
 package org.itmo.modules;
 
 import org.itmo.utils.CommandInfo;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Stream;
 
+import static org.itmo.commands.Commands.echo;
+import static org.itmo.commands.Commands.cat;
+import static org.itmo.commands.Commands.external;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class ParserTests {
     
-    Parser parser = new Parser();
-    
-    @ParameterizedTest
-    @MethodSource("testingDifferentStrings")
-    public void parseStringTest (String expected, String actual) {
-        assertEquals(expected, parser.substitutor(actual).toString());
-    }
-    
-    static Stream<? extends Arguments> testingDifferentStrings() {
-        return Stream.of(
-                Arguments.of("this is just (a) string", "this is just (a) string"),
-                Arguments.of("this is some string", "this is 'some' string"),
-                Arguments.of("this is string", "this is \"string\""),
-                Arguments.of("this is 'a' string", "this \"is 'a'\" string"),
-                Arguments.of("this is \"a\" string", "this 'is \"a\"' string"),
-                Arguments.of("this is a string'", "this is a string'"),
-                Arguments.of("this is a string\"", "this is a string\""),
-                Arguments.of("this is \"a\" string", "this 'is \"a'\" string"),
-                Arguments.of("this is 'a' string", "this \"is 'a\"' string")
-        );
-    }
-    
-    @Test
-    public void shouldCorrectlySubstitute() {
-        parser.commandParser("x=y");
-        assertEquals("echo y", parser.substitutor("echo $x").toString());
-        assertEquals("echo y", parser.substitutor("echo \\\\$x").toString());
-        assertEquals("echo y $x", parser.substitutor("echo \\\\$x \\$x").toString());
-        assertEquals("echo $x", parser.substitutor("echo \\$x").toString());
-        assertEquals("echo $$x", parser.substitutor("echo $$x").toString());
-        assertEquals("echo $$y y", parser.substitutor("echo $$$x $x").toString());
-    }
+    private final Parser parser = new Parser();
     
     @ParameterizedTest
     @MethodSource("commands")
-    public void parseCommands(String line, CommandInfo expected) {
-
+    public void parseCommands(List<String> line, CommandInfo expected) {
         CommandInfo commandInfo = parser.commandParser(line).get(0);
         assertEquals(commandInfo.getCommandName(), expected.getCommandName());
         assertEquals(expected.getFlags().size(), commandInfo.getFlags().size());
@@ -65,18 +35,112 @@ public class ParserTests {
     
     static Stream<? extends Arguments> commands() {
         return Stream.of(
-                Arguments.of("echo sffslk", new CommandInfo("echo",
-                                                            new ArrayList<>(),
-                                                            new ArrayList<>(Arrays.asList("sffslk")))),
-                Arguments.of("cat -h smth", new CommandInfo("cat",
-                                                            new ArrayList<>(Arrays.asList("-h")),
-                                                            new ArrayList<>(Arrays.asList("smth")))),
-                Arguments.of("someCommand", new CommandInfo("someCommand",
-                                                            new ArrayList<>(),
-                                                            new ArrayList<>())),
-                Arguments.of("cat --E some.txt get.txt", new CommandInfo("cat",
-                                                                         new ArrayList<>(Arrays.asList("--E")),
-                                                                         new ArrayList<>(Arrays.asList("some.txt", "get.txt"))))
+                Arguments.of(List.of("echo sffslk"), new CommandInfo(echo,
+                        new ArrayList<>(),
+                        List.of("sffslk"))),
+                Arguments.of(List.of("cat -h smth"), new CommandInfo(cat,
+                        List.of("-h"),
+                        List.of("smth"))),
+                Arguments.of(List.of("someCommand"), new CommandInfo(external,
+                        List.of("someCommand"),
+                        new ArrayList<>())),
+                Arguments.of(List.of("cat --E some.txt get.txt"), new CommandInfo(cat,
+                        List.of("--E"),
+                        List.of("some.txt", "get.txt")))
+        );
+    }
+    
+    @ParameterizedTest
+    @MethodSource("testingDifferentStrings")
+    public void parseStringTest(List<String> expected, String actual) {
+        List<String> result = parser.substitutor(actual);
+        assertEquals(expected.size(), result.size());
+        for (int i = 0; i < expected.size(); i++) {
+            assertEquals(expected.get(i), result.get(i));
+        }
+    }
+    
+    static Stream<? extends Arguments> testingDifferentStrings() {
+        return Stream.of(
+                Arguments.of(List.of("this is just (a) string"), "this is just (a) string"),
+                Arguments.of(List.of("this is some string"), "this is 'some' string"),
+                Arguments.of(List.of("this is string"), "this is \"string\""),
+                Arguments.of(List.of("this is 'a' string"), "this \"is 'a'\" string"),
+                Arguments.of(List.of("this is \"a\" string"), "this 'is \"a\"' string"),
+                Arguments.of(List.of("this is a string'"), "this is a string'"),
+                Arguments.of(List.of("this is a string\""), "this is a string\""),
+                Arguments.of(List.of("this is \"a\" string"), "this 'is \"a'\" string"),
+                Arguments.of(List.of("this is 'a' string"), "this \"is 'a\"' string"),
+                Arguments.of(List.of("if \\\\this \\ is ' \\a  \\\\ | string $"), "if \\\\\\this \\\\ is \\'    \\\\\"a  \\\\\" \\| string \\$ ")
+        );
+    }
+    
+    @ParameterizedTest
+    @MethodSource("pipes")
+    public void shouldParseWithPipes(String input, List<String> expected) {
+        List<String> result = parser.substitutor(input);
+        assertEquals(expected.size(), result.size());
+        for (int i = 0; i < expected.size(); i++) {
+            assertEquals(expected.get(i).trim(), result.get(i).trim());
+        }
+    }
+    
+    static Stream<? extends Arguments> pipes() {
+        return Stream.of(
+                Arguments.of("echo ds | cat ds", List.of("echo ds", "cat ds")),
+                Arguments.of("echo ds|cat ds", List.of("echo ds", "cat ds")),
+                Arguments.of("echo ds|", List.of("echo ds")),
+                Arguments.of("echo ds| ", List.of("echo ds")),
+                Arguments.of("echo ds\\| ", List.of("echo ds| ")),
+                Arguments.of("echo ds \\| cat", List.of("echo ds | cat")),
+                Arguments.of("echo ds \\\\| cat", List.of("echo ds \\", "cat")),
+                Arguments.of("echo 'ds |' cat", List.of("echo ds | cat")),
+                Arguments.of("echo \"ds |\" cat", List.of("echo ds | cat")),
+                Arguments.of("echo \"ds $|\" cat", List.of("echo ds  cat")),
+                Arguments.of("this is \"a\" string | this is 'a' string",
+                        List.of("this is a string", "this is a string"))
+        );
+    }
+    
+    @ParameterizedTest
+    @MethodSource("substitutes")
+    public void shouldCorrectlySubstitute(List<String> expected, String substitute) {
+        parser.commandParser(List.of("x=y"));
+        parser.commandParser(List.of("a===c"));
+        List<String> result = parser.substitutor(substitute);
+        assertEquals(expected.size(), result.size());
+        for (int i = 0; i < expected.size(); i++) {
+            assertEquals(expected.get(i), result.get(i));
+        }
+    }
+    
+    static Stream<? extends Arguments> substitutes() {
+        return Stream.of(
+                Arguments.of(List.of("echo y"), "echo $x"),
+                Arguments.of(List.of("echo ==c"), "echo $a"),
+                Arguments.of(List.of("echo \\y"), "echo \\\\$x"),
+                Arguments.of(List.of("echo \\y $x"), "echo \\\\$x \\$x"),
+                Arguments.of(List.of("echo \\$x"), "echo \\\\\\$x"),
+                Arguments.of(List.of("echo $$x"), "echo $$x"),
+                Arguments.of(List.of("echo $$y y"), "echo $$$x $x"),
+                Arguments.of(List.of("echo y \\"), "echo $x \\\\"),
+                Arguments.of(List.of("y==c"), "$x$a")
+        );
+    }
+    
+    @ParameterizedTest
+    @MethodSource("forInitialisingTest")
+    public void initialisingTest(String name, String value, String expect) {
+        parser.commandParser(parser.substitutor(name + "=" + value));
+        List<CommandInfo> commands = parser.commandParser(parser.substitutor("echo $" + name));
+        assertEquals(expect, String.join(" ", commands.get(0).getParams()));
+    }
+    
+    static Stream<? extends Arguments> forInitialisingTest() {
+        return Stream.of(
+                Arguments.of("x", "some", "some"),
+                Arguments.of("x", "\"just   a   \\\\ string\"", "just a \\\\ string"),
+                Arguments.of("x", "'some string'", "some string")
         );
     }
     
